src/snapshots/alma__parser__tests__test_module_parser__record_field_value_with_params.snap
---
source: src/parser.rs
assertion_line: 2950
expression: "parse(\"\nmodule Test\n\ntype Fruit a = { test : Banana a (Phone a) }\n\")"
---
Input:


module Test

type Fruit a = { test : Banana a (Phone a) }


Result:

(
    Module {
        name: ModuleName {
            parts: [
                CapitalizedIdentifier {
                    name: SymbolU32 {
                        value: 1,
                    },
                    span: Index(
                        0,
                    ),
                },
            ],
            full_name: SymbolU32 {
                value: 1,
            },
        },
        exports: [],
        imports: [],
        definitions: [],
        type_definitions: [
            TypeDefinition {
                span: Index(
                    11,
                ),
                name: CapitalizedIdentifier {
                    name: SymbolU32 {
                        value: 2,
                    },
                    span: Index(
                        1,
                    ),
                },
                vars: [
                    Identifier {
                        name: SymbolU32 {
                            value: 3,
                        },
                        span: Index(
                            2,
                        ),
                    },
                ],
                typ: Record(
                    Record(
                        Record {
                            span: Index(
                                10,
                            ),
                            fields: [
                                (
                                    Identifier {
                                        name: SymbolU32 {
                                            value: 4,
                                        },
                                        span: Index(
                                            3,
                                        ),
                                    },
                                    App(
                                        Constructor {
                                            span: Index(
                                                9,
                                            ),
                                            name: CapitalizedIdentifier {
                                                name: SymbolU32 {
                                                    value: 5,
                                                },
                                                span: Index(
                                                    4,
                                                ),
                                            },
                                            params: [
                                                Var(
                                                    Identifier {
                                                        name: SymbolU32 {
                                                            value: 3,
                                                        },
                                                        span: Index(
                                                            5,
                                                        ),
                                                    },
                                                ),
                                                App(
                                                    Constructor {
                                                        span: Index(
                                                            8,
                                                        ),
                                                        name: CapitalizedIdentifier {
                                                            name: SymbolU32 {
                                                                value: 6,
                                                            },
                                                            span: Index(
                                                                6,
                                                            ),
                                                        },
                                                        params: [
                                                            Var(
                                                                Identifier {
                                                                    name: SymbolU32 {
                                                                        value: 3,
                                                                    },
                                                                    span: Index(
                                                                        7,
                                                                    ),
                                                                },
                                                            ),
                                                        ],
                                                    },
                                                ),
                                            ],
                                        },
                                    ),
                                ),
                            ],
                        },
                    ),
                ),
            },
        ],
    },
    [],
)

{}

{
    Index(
        0,
    ): Span {
        start: Index(
            1,
        ),
        end: Index(
            1,
        ),
    },
    Index(
        1,
    ): Span {
        start: Index(
            3,
        ),
        end: Index(
            3,
        ),
    },
    Index(
        2,
    ): Span {
        start: Index(
            4,
        ),
        end: Index(
            4,
        ),
    },
    Index(
        3,
    ): Span {
        start: Index(
            7,
        ),
        end: Index(
            7,
        ),
    },
    Index(
        4,
    ): Span {
        start: Index(
            9,
        ),
        end: Index(
            9,
        ),
    },
    Index(
        5,
    ): Span {
        start: Index(
            10,
        ),
        end: Index(
            10,
        ),
    },
    Index(
        6,
    ): Span {
        start: Index(
            12,
        ),
        end: Index(
            12,
        ),
    },
    Index(
        7,
    ): Span {
        start: Index(
            13,
        ),
        end: Index(
            13,
        ),
    },
    Index(
        8,
    ): Span {
        start: Index(
            12,
        ),
        end: Index(
            13,
        ),
    },
    Index(
        9,
    ): Span {
        start: Index(
            9,
        ),
        end: Index(
            14,
        ),
    },
    Index(
        10,
    ): Span {
        start: Index(
            6,
        ),
        end: Index(
            15,
        ),
    },
    Index(
        11,
    ): Span {
        start: Index(
            2,
        ),
        end: Index(
            15,
        ),
    },
}
