src/snapshots/alma__parser__tests__test_module_parser__signatures-3.snap
---
source: src/parser.rs
assertion_line: 3102
expression: "parse(\"\\\nmodule Test exposing (main)\n\nmain : Fruit -> Fruit a\n\ntest = 5\n\")"
---
Input:

module Test exposing (main)

main : Fruit -> Fruit a

test = 5


Result:

(
    Module {
        name: ModuleName {
            parts: [
                CapitalizedIdentifier {
                    name: SymbolU32 {
                        value: 1,
                    },
                    span: Index(
                        0,
                    ),
                },
            ],
            full_name: SymbolU32 {
                value: 1,
            },
        },
        exports: [
            Export {
                span: Index(
                    1,
                ),
                typ: Identifier(
                    Identifier {
                        name: SymbolU32 {
                            value: 2,
                        },
                        span: Index(
                            1,
                        ),
                    },
                ),
            },
        ],
        imports: [],
        definitions: [
            TypeSignature(
                TypeSignature {
                    name: Identifier {
                        name: SymbolU32 {
                            value: 2,
                        },
                        span: Index(
                            2,
                        ),
                    },
                    typ: Fun {
                        params: [
                            App(
                                Constructor {
                                    span: Index(
                                        4,
                                    ),
                                    name: CapitalizedIdentifier {
                                        name: SymbolU32 {
                                            value: 3,
                                        },
                                        span: Index(
                                            3,
                                        ),
                                    },
                                    params: [],
                                },
                            ),
                        ],
                        ret: App(
                            Constructor {
                                span: Index(
                                    7,
                                ),
                                name: CapitalizedIdentifier {
                                    name: SymbolU32 {
                                        value: 3,
                                    },
                                    span: Index(
                                        5,
                                    ),
                                },
                                params: [
                                    Var(
                                        Identifier {
                                            name: SymbolU32 {
                                                value: 4,
                                            },
                                            span: Index(
                                                6,
                                            ),
                                        },
                                    ),
                                ],
                            },
                        ),
                    },
                },
            ),
            Untyped(
                Pattern(
                    Pattern {
                        span: Index(
                            8,
                        ),
                        typ: Identifier(
                            Identifier {
                                name: SymbolU32 {
                                    value: 5,
                                },
                                span: Index(
                                    8,
                                ),
                            },
                        ),
                    },
                    Expression {
                        span: Index(
                            10,
                        ),
                        typ: RefCell {
                            value: None,
                        },
                        expr: Float(
                            5.0,
                        ),
                    },
                ),
            ),
        ],
        type_definitions: [],
    },
    [],
)
